Preparando para o repositorio

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
         <script type="text/javascript" src="lib/js/functions.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script>
-            persistence.open({name: "moises", version: "", description: "", size: (5 * 5 * 1024)}, function() {
+            persistence.open({name: "moises1", version: "", description: "", size: (5 * 5 * 1024)}, function() {
                 console.log("Tabelas criadas");
             });
         </script>
